@@ -180,7 +180,6 @@ and module_type =
 type module_def = {
 	mpath : path;
 	mtypes : module_type list;
-	mutable mimports : (module_def * string option) list;
 }
 
 let mk e t p = { eexpr = e; etype = t; epos = p }
